--- a/index.html
+++ b/index.html
@@ -1,6 +1,11 @@
 <!DOCTYPE html>
 <html>
 <head>
+<!--  Meta  -->
+  <meta charset="UTF-8" />
+  <title>reetus-dwai Githubs</title>
+  <link rel="stylesheet" href="style.css">
+  <script src='script.js'></script>
 </head>
 <body>
 <body>
